# gen-art-templates

./: Dockerfile  config.py  config.toml  diffuser.py  main.py  pyproject.toml  requirements.txt  utils.py
src/: main.py  main_upload.py
